[package]
name = "gyuvl53l0x"
version = "0.1.3"
description = "A rust driver for the VL53L0X (Time-of-Flight I2C laser-ranging module)"
authors = ["Luca Zulian <lucagiuggia@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["hal", "IO"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lucazulian/gyuvl53l0x"
edition = "2018"
exclude = [
    ".travis.yml", 
]

[dependencies]
embedded-hal = "0.2.3"
generic-array = "0.13.2"
nb = "0.1.2"

[dependencies.cast]
default-features = false
version = "0.2.3"
uninit = "0.1.0"