[package]
name = "gyuvl53l0x"
version = "0.3.0"
description = "A rust driver for the VL53L0X (Time-of-Flight I2C laser-ranging module)"
authors = ["Luca Zulian <lucagiuggia@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["hal", "IO"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lucazulian/gyuvl53l0x"
edition = "2018"
exclude = []

[dependencies]
embedded-hal = "1.0.0"
generic-array = "0.14.5"
nb = "1.0.0"

[dependencies.cast]
default-features = false
version = "0.3.0"
uninit = "0.1.0"
